[package]
name = "projects-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlElement", "HtmlInputElement", "console"] }
gloo-console = "0.3.0"